--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,65 @@
-body {
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;700&display=swap');
+
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Quicksand', sans-serif;
+  color: #333;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.App {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.Navbar{
+  max-width: 1000px;
+  width: 100%;
+  padding: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  padding: 20px;
+  border-bottom: 1px solid #f2f2f2;
+}
+
+.Navbar h1 {
+  color: #f1356d;
+  font-size: 2rem;
+}
+
+.Navbar a {
+  text-decoration: none;
+  margin-left: 32px;
+  font-size: 1.2rem;
+  font-weight: 400;
+}
+
+.Navbar a:hover {
+  color: #f1356d;
+}
+
+.content {
+  margin-top: 4rem;
+  max-width: 600px;
+  width: 100%;
+}
+
+.blog-preview {
+  padding: 10px 16px;
+  margin: 20px 0px;
+  border-bottom: 1px solid #fafafa;
+  border-radius: 10px;
+}
+
+.blog-preview:hover {
+  box-shadow: 1px 3px 5px rgba(0, 0, 0, 0.1);
+}
+
+.blog-preview h2 {
+  color: #f1356d;
+  font-size: 20px;
+  margin-bottom: 8px;
 }
