--- a/src/index.css
+++ b/src/index.css
@@ -63,3 +63,19 @@
   font-size: 20px;
   margin-bottom: 8px;
 }
+
+.blog-preview a {
+  text-decoration: none;
+}
+
+.blog-details h2 {
+  font-size: 2.5rem;
+}
+
+.blog-details h4 {
+  margin: 20px 0px;
+}
+
+.blog-details-body {
+  font-size: 16px;
+}
